2005-05-24  Daniel Stone  <daniel@freedesktop.org>

	* xkb/ddxKillSrv.c:
	* xkb/ddxPrivate.c:
	* xkb/ddxVT.c:
	Minor #include cleanups.

	* xkb/xkb.c:
	* xkb/xkbUtils.c:
	* hw/xfree86/common/xf86Config.c:
	* hw/xfree86/common/xf86Io.c:
	* hw/xfree86/os-support/sysv/xqueue.c:
	* hw/xnest/Keyboard.c:
	* hw/kdrive/src/kinput.c:
	* hw/xgl/egl/kinput.c:
	* hw/dmx/input/dmxinputinit.c:
	* hw/xgl/glx/xglx.c:
	* hw/xwin/winconfig.c:
	* hw/xwin/winkeybd.c:
	Remove -xkbmap argument.

2006-05-26  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/os-support/bsd/bsd_mouse.c:
	check buffersize before reading next char, fixes the 
	"mouse stuck at left" bug (bugzilla #3113) for BSD systems using 
	wscons. (Dale Rahn).

2006-05-25  Jeremy C. Reed  <reed@reedmedia.net>

	* doc/Xserver.man.pre:
	* hw/xfree86/doc/man/Xorg.man.pre:
	* hw/xfree86/doc/man/xorg.conf.man.pre:
	RGB color database and XErrorDB install to "share" not
	"lib" by default (by app/rgb and libX11). (TODO: They are
	customizable, so maybe cpprules.in should be extended.)

2006-05-25  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Adam Jackson

	* hw/xfree86/common/xf86Config.c: (GenerateDriverlist):
	Don't do fixup_video_driver_list if no drivers.  (I had
	signal 11 and core dump when drivers not installed yet.)
	(TODO: fix fixup_video_driver_list to handle NULL argument.)

2006-05-25  Matthieu Herrb <matthieu.herrb@laas.fr>

	* mi/midispcur.c: (miDCCloseScreen)
	Don't destroy a pixmap twice on server exit (bugzilla #4247).
	* GL/symlink-mesa.sh:
	* GL/mesa/main/Makefile.am:
	update to build against Mesa CVS HEAD 
	(Carlos Eduardo Rodrigues Diógenes)

2006-05-24  Jeremy C. Reed  <reed@reedmedia.net>

	* hw/xfree86/utils/xorgcfg/text-mode.c:
	NetBSD also has curses.h instead of ncurses.h. (TODO:
	Maybe instead of checking for SCO, UnixWare, Sun SVR4 and
	NetBSD, the curses.h versus ncurses.h should be tested in
	configure.)

2006-05-24  Jeremy C. Reed  <reed@reedmedia.net>

	* configure.ac: