@@ -59,14 +59,6 @@
 #include "dispatch.h"
 #include "indirect_dispatch.h"
 
-#ifndef GLX_TEXTURE_TARGET_EXT
-#define GLX_TEXTURE_TARGET_EXT              0x6001
-#define GLX_TEXTURE_2D_EXT                  0x6002
-#define GLX_TEXTURE_RECTANGLE_EXT           0x6003
-#define GLX_NO_TEXTURE_EXT                  0x6004
-#define GLX_Y_INVERTED_EXT                  0x6006
-#endif
-
 /************************************************************************/
 
 void
