@@ -1,3 +1,7 @@
+2006-05-29  Kristian Høgsberg  <krh@redhat.com>
+
+	* GL/glx/glxcmds.c: Remove superfluous definition of tfp tokens.
+
 2005-05-24  Daniel Stone  <daniel@freedesktop.org>
 
 	* xkb/ddxKillSrv.c:
